# DataFusionX

./: .env  .gitignore  README.md  pyproject.toml
app/: app.py  financial_news_sentiment.csv  main.py
app/.streamlit/: config.toml
app/analyzers/: sentiment_analyzer.py
app/config/: settings.py
app/news_fetchers/: alpha_vantage.py  base_fetcher.py  multi_sources.py  newsapi_fetcher.py  reddit.py  twitter.py
app/processors/: cleaner.py  sentiment.py
app/storage/: database.py
app/utils/: visualizer.py
script/: ffinance.py  main.py  tweepy.py  vantage.py  yfinance.py
script/visualization/: dashboard.py
