[project]
name = "script"
version = "0.1.0"
description = ""
authors = [
    {name = "meryaaam",email = "mariemchouaiti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.55,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts] 
yfinance = "script.yfinance:run"
ffinance = "script.ffinance:run"
tweepy = "script.tweepy:run"
vantage ="script.vantage:run"
 
