[project]
name = "script"
version = "0.1.0"
description = ""
authors = [
    {name = "meryaaam",email = "mariemchouaiti@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.4"
dependencies = [
    "yfinance (>=0.2.55,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts] 
yfinance = "script.yfinance:run"
ffinance = "script.ffinance:run"
tweepy = "script.tweepy:run"
vantage ="script.vantage:run"
main = "script.main:run"
 
